src/Blocks/EmbedPress/src/editor.scss
$color_1: #0098ab;
$color_2: #757575;
$color_3: #2e3e48;

/**
 * #.# Editor Styles
 *
 * CSS for just Backend enqueued after style.scss
 * which makes it higher in priority.
 */
/*Meetup Event styling starts */
/*Host*/
/*--------------------------------------------------------------
# Alignments
--------------------------------------------------------------*/
.wp-block-embedpress-embedpress {
    iframe {
        max-width: 100%;
    }
    .components-placeholder.wp-block-embed {
        min-width: 550px;
        max-width: 100% !important;
    }
    max-width: 100% !important;
}
.ose-the-new-york-times {
    iframe {
        min-height: 500px;
        max-height: 100%;
    }
}
.block-editor-block-list__layout {
    .wp-block {
        figure {
            margin: 0;
        }
        iframe {
            margin: 0;
        }
    }
}
.editor-styles-wrapper {
    .block-editor-block-list__layout.is-root-container {
        > .wp-block-embedpress-embedpress {
            max-width: 1200px !important;
        }
    }
    .wp-block[data-align="center"] {
        text-align: center;
    }
    .wp-block {
        &::after {
            content: "";
            display: block;
            clear: both;
            min-height: 1px;
        }
    }
}
.embedpress-event {
    .link {
        color: $color_1;
    }
    .visibility--a11yHide {
        border: 0;
        clip: rect(0 0 0 0);
        position: absolute;
        overflow: hidden;
        margin: -1px;
        padding: 0;
        width: 1px;
        height: 1px;
    }
    .text--small {
        font-size: 14px;
        margin: 0;
    }
    .flex {
        display: flex;
        box-sizing: border-box;
    }
    .flex--wrap {
        flex-wrap: wrap;
    }
    .flex--row {
        align-items: center;
        box-sizing: border-box;
        display: flex;
        justify-content: flex-start;
        flex-direction: row;
        flex-wrap: nowrap;
        > .flex-item {
            &:first-child {
                padding-left: 0;
            }
        }
    }
    .flex-item {
        flex-basis: 0;
        flex-grow: 1;
        width: auto;
        min-width: 0;
        box-sizing: border-box;
    }
    .flex-item--shrink {
        flex-basis: auto;
        -webkit-box-flex: 0;
        flex-grow: 0;
        flex-shrink: 0;
        width: auto;
    }
    .text--bold {
        font-weight: 700;
    }
    h1 {
        font-size: inherit;
    }
    h2 {
        font-size: inherit;
    }
    h3 {
        font-size: inherit;
    }
    h4 {
        font-size: inherit;
    }
    h5 {
        font-size: inherit;
    }
    h6 {
        font-size: inherit;
    }
    .ep-event--title {
        font-size: 32px;
        font-weight: 700;
    }
    .ep-event--date {
        color: $color_2;
        font-weight: 400;
        font-size: 16px;
    }
    .ep-event--host {
        margin-top: 20px;
        display: flex;
        align-items: center;
        margin-bottom: 20px;
    }
    img.avatar--person {
        background-image: none !important;
        background-repeat: no-repeat;
        background-position: 50%;
        background-size: cover;
        border-radius: 50%;
        box-sizing: border-box;
        vertical-align: middle;
    }
    .event-description {
        margin-top: 20px;
    }
    .align--center {
        text-align: center;
    }
    .card {
        background: #fff;
        background-clip: padding-box;
        background-size: cover;
        border: 1px solid rgba(46, 62, 72, 0.12);
        border-radius: 8px;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        display: block;
        min-height: 100%;
        padding: 16px 16px 18px;
        position: relative;
        white-space: normal;
    }
    .card--hasHoverShadow {
        transition:
            box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1),
            transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
    }
    .ep-event-group-link {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        background: #ffffff;
        border-radius: 8px;
        padding: 20px;
        margin-bottom: 20px;
        border: 1px solid rgba(46, 62, 72, 0.12);
    }
    .ep-event-group--name {
        padding-left: 20px;
        font-size: 14px;
        line-height: 1.45;
        margin: 0;
        width: 70%;
        word-break: break-word;
    }
    .ep-event-group--image {
        -o-object-fit: cover;
        object-fit: cover;
        width: 56px;
        height: 56px;
        border-radius: 4px;
    }
    .ep-event-time-location {
        background: #ffffff;
        border-radius: 8px;
        padding: 16px 20px 0 20px;
        border: 1px solid rgba(46, 62, 72, 0.12);
        .ep-event-datetime {
            padding-bottom: 20px;
            font-size: 15px;
            line-height: 1.5;
            color: $color_3;
            font-style: normal;
            margin: 0;
        }
        .ep-event-location {
            padding-bottom: 20px;
        }
    }
    .ep-event-location {
        .wrap--singleLine--truncate {
            font-size: 15px;
            line-height: 1.5;
            color: $color_3;
            font-style: normal;
            margin: 0;
        }
        address {
            font-style: normal;
            margin: 0;
        }
        .venueDisplay-venue-address {
            font-style: normal;
            color: $color_2;
            margin: 0;
        }
        p {
            line-height: 20px;
        }
    }
}
.ep-event--host {
    .avatar-print {
        border-radius: 50%;
        height: 50px;
        width: 50px;
    }
}
.event-info-hosts-text {
    padding-left: 20px;
    font-size: 16px;
    font-weight: 400;
}
.text--sectionTitle {
    font-size: 20px;
    line-height: 28px;
}
.ep-event--attendees {
    margin-top: 50px;
    > .flex {
        margin-bottom: 20px;
    }
    .gridList {
        list-style: none;
        margin: 0 -16px 0 0;
        padding: 0;
    }
    .gridList-item {
        width: auto;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        display: inline-block;
        font-size: 1rem;
        margin: 0;
        vertical-align: top;
        width: 50%;
    }
    .gridList--autoHeight--has4 {
        > .gridList-item {
            flex: 0 0 50%;
            max-width: 50%;
        }
    }
    .groupMember-name {
        line-height: 1.2 !important;
    }
    .avatar--person {
        margin-bottom: 15px;
        display: inline-block;
        border-radius: 50%;
    }
    img.avatar-print {
        border-radius: 50%;
    }
    .groupMember-role {
        font-size: 12px;
        color: $color_2;
        padding-top: 2px;
        margin: 0;
    }
    .groupMember {
        min-height: 100%;
        min-width: 128px;
        padding-left: 8px;
        padding-right: 8px;
    }
}
.gridList-itemInner {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    height: 100%;
    padding: 0 16px 16px 0;
}
.editor-block-list__block[data-align="right"] {
    > .editor-block-list__block-edit {
        float: right;
    }
}
.wp-block[data-align="left"] {
    height: auto !important;
}
.wp-block[data-align="right"] {
    height: auto !important;
}
// {
// .editor-styles-wrapper {
//     .wp-block[data-align="center"] {
//         > * {
//             &:not(style) {
//                 // display: inline-table;
//             }
//         }
//     }
// }
// }
.alignleft {
    display: inline;
    float: left;
    margin-right: 1.5em;
}
.alignright {
    display: inline;
    float: right;
    margin-left: 1.5em;
}
.aligncenter {
    clear: both;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.cbutton-preview-wrapper {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background: #fff8f8;
    height: 200px;
    width: 300px;
    margin: auto;
    margin-top: -350px;
}
h4.cbutton-preview-text {
    padding-top: 0;
    margin-top: 0;
}
@media screen and (max-width: 782px) {
    .block-editor-block-list__layout {
        .wp-block {
            figure {
                height: 250px;
            }
            iframe {
                height: 250px;
            }
        }
    }
}
@media only screen and (min-width: 530px) {
    .ep-event--attendees {
        .gridList--autoHeight--has4 {
            > .gridList-item {
                flex: 0 0 33.333333%;
                max-width: 33.333333%;
            }
        }
    }
}
@media only screen and (min-width: 640px) {
    .embedpress-event {
        .card {
            padding: 18px 18px 20px;
        }
    }
    .ep-event--attendees {
        .gridList--autoHeight--has4 {
            > .gridList-item {
                flex: 0 0 25%;
                max-width: 25%;
            }
        }
    }
}
@media only screen and (min-width: 482px) {
    .editor-styles-wrapper {
        .wp-block[data-align="right"] {
            > * {
                max-width: 100% !important;
            }
        }
        .wp-block[data-align="left"] {
            > * {
                max-width: 100% !important;
            }
        }
    }
}

